--- a/src/catalog.html
+++ b/src/catalog.html
@@ -215,7 +215,7 @@
 
     </div>
 
-    <ul class="dropdown__menu dropdown__menu--open">
+    <ul class="dropdown__menu">
 
         <li class="dropdown__item active">
             За калорійністю
@@ -226,6 +226,7 @@
         <li class="dropdown__item ">
             По типу
         </li>
+
     </ul>
 
 </div>
@@ -240,7 +241,7 @@
 
     </div>
 
-    <ul class="dropdown__menu dropdown__menu--open">
+    <ul class="dropdown__menu">
 
         <li class="dropdown__item active">
             По 10
@@ -251,6 +252,7 @@
         <li class="dropdown__item ">
             По 6
         </li>
+
     </ul>
 
 </div>
