--- a/src/modules/pages/main/application/_application.html
+++ b/src/modules/pages/main/application/_application.html
@@ -1,6 +1,6 @@
 <section class="application section" id="application">
 
-    <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
+    <div class="application__inner" style="background-image: url('./assets/images/application/get_app@1x.webp')">
 
         <div class="application__box">
 
