--- a/src/modules/pages/main/features/_features.html
+++ b/src/modules/pages/main/features/_features.html
@@ -1,6 +1,6 @@
 <section class="features section" id="features">
 
-    <div class="features__inner" style="background-image: url('../assets/images/features/food_delivery@1x.webp')">
+    <div class="features__inner" style="background-image: url('./assets/images/features/food_delivery@1x.webp')">
 
         <div class="features__content">
 
