--- a/src/product.html
+++ b/src/product.html
@@ -8,11 +8,11 @@
         Simple food | Чізбургер з листям салату
     </title>
 
-    <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
-    <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest">
-    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
+    <link href="./assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
+    <link href="./assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="./assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="./assets/icons/favicon/site.webmanifest" rel="manifest">
+    <link href="./assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
 
     <link href="./css/swiperjs.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
@@ -203,19 +203,19 @@
                 <li class="swiper-slide product-list__item">
     <article class="image-card">
         <a class="link image-card__link" href="./product.html">
-            <img class="image-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="400" height="400">
+            <img class="image-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="400" height="400">
         </a>
     </article>
 </li><li class="swiper-slide product-list__item">
     <article class="image-card">
         <a class="link image-card__link" href="./product.html">
-            <img class="image-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургер" width="400" height="400">
+            <img class="image-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургер" width="400" height="400">
         </a>
     </article>
 </li><li class="swiper-slide product-list__item">
     <article class="image-card">
         <a class="link image-card__link" href="./product.html">
-            <img class="image-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія Королівський чізбургер" width="400" height="400">
+            <img class="image-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія Королівський чізбургер" width="400" height="400">
         </a>
     </article>
 </li>
@@ -518,7 +518,7 @@
             <li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -527,7 +527,7 @@
 </li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -536,7 +536,7 @@
 </li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -545,7 +545,7 @@
 </li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -554,7 +554,7 @@
 </li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -563,7 +563,7 @@
 </li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -572,7 +572,7 @@
 </li><li class="swiper-slide product-list__item" data-category="dishes">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -581,7 +581,7 @@
 </li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -590,7 +590,7 @@
 </li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -599,7 +599,7 @@
 </li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
