--- a/src/catalog.html
+++ b/src/catalog.html
@@ -8,11 +8,11 @@
         Simple food | Каталог продуктів
     </title>
 
-    <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
-    <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest">
-    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
+    <link href="./assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
+    <link href="./assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="./assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="./assets/icons/favicon/site.webmanifest" rel="manifest">
+    <link href="./assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
 
     <link href="./css/swiperjs.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
@@ -419,7 +419,7 @@
                 <li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -428,7 +428,7 @@
 </li><li class="product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -437,7 +437,7 @@
 </li><li class="product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -446,7 +446,7 @@
 </li><li class="product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -455,7 +455,7 @@
 </li><li class="product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -464,7 +464,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -473,7 +473,7 @@
 </li><li class="product-list__item" data-category="dishes">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -482,7 +482,7 @@
 </li><li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -491,7 +491,7 @@
 </li><li class="product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -500,7 +500,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -509,7 +509,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -518,7 +518,7 @@
 </li><li class="product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -614,7 +614,7 @@
 
                 <section class="application section" id="application">
 
-    <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
+    <div class="application__inner" style="background-image: url('./assets/images/application/get_app@1x.webp')">
 
         <div class="application__box">
 
@@ -669,7 +669,7 @@
     <article class="rest-card promo-card">
 
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
         </a>
 
         <p class="promo-card__text">
@@ -683,7 +683,7 @@
     <article class="rest-card promo-card">
 
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
         </a>
 
         <p class="promo-card__text">
@@ -697,7 +697,7 @@
     <article class="rest-card promo-card">
 
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
         </a>
 
         <p class="promo-card__text">
