--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
         Simple food | Головна сторінка
     </title>
 
-    <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
-    <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest">
-    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
+    <link href="./assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
+    <link href="./assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+    <link href="./assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="./assets/icons/favicon/site.webmanifest" rel="manifest">
+    <link href="./assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
 
     <link href="./css/swiperjs.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
@@ -163,7 +163,7 @@
 
                 <section class="hero section" id="hero">
 
-    <div class="hero__inner" style="background-image: url('../assets/images/hero/guy@1x.webp');">
+    <div class="hero__inner" style="background-image: url('./assets/images/hero/guy@1x.webp');">
 
         <div class="hero__content">
 
@@ -241,7 +241,7 @@
     <li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -250,7 +250,7 @@
 </li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -259,7 +259,7 @@
 </li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -268,7 +268,7 @@
 </li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -277,7 +277,7 @@
 </li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -286,7 +286,7 @@
 </li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
             <h3 class="link product-card__title">Чізбургер з листям салату</h3>
             <span class="product-card__price">140 грн.</span>
         </a>
@@ -295,7 +295,7 @@
 </li><li class="swiper-slide product-list__item" data-category="dishes">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
             <h3 class="link product-card__title">Біфбургер</h3>
             <span class="product-card__price">190 грн.</span>
         </a>
@@ -304,7 +304,7 @@
 </li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
             <h3 class="link product-card__title">Королівський чізбургер</h3>
             <span class="product-card__price">260 грн.</span>
         </a>
@@ -313,7 +313,7 @@
 </li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
             <h3 class="link product-card__title">Чорний гамбургер</h3>
             <span class="product-card__price">199 грн.</span>
         </a>
@@ -322,7 +322,7 @@
 </li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
-            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <img class="product-card__img" src="./assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
             <h3 class="link product-card__title">Чікен бургер</h3>
             <span class="product-card__price">180 грн.</span>
         </a>
@@ -341,7 +341,7 @@
 </section>
                 <section class="features section" id="features">
 
-    <div class="features__inner" style="background-image: url('../assets/images/features/food_delivery@1x.webp')">
+    <div class="features__inner" style="background-image: url('./assets/images/features/food_delivery@1x.webp')">
 
         <div class="features__content">
 
@@ -392,7 +392,7 @@
             <li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_1@2x.webp" alt="Піцца Блейз" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Blaze Pizza</span>
@@ -407,7 +407,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_2@2x.webp" alt="Піцца Ранчо" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Pizza Runcho</span>
@@ -422,7 +422,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_3@2x.webp" alt="Pizza Hut" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Pizza Hut</span>
@@ -437,7 +437,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_4@2x.webp" alt="Гамбургер Макдональдз" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_4@2x.webp" alt="Гамбургер Макдональдз" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">McDonald`s</span>
@@ -452,7 +452,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_5@2x.webp" alt="Картопля фрі з КФС" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_5@2x.webp" alt="Картопля фрі з КФС" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">KFC</span>
@@ -467,7 +467,7 @@
 </li><li class="swiper-slide restaurant__item">
     <article class="rest-card">
         <a class="rest-card__link" href="#">
-            <img class="rest-card__img" src="../assets/images/restaurant/resto_6@2x.webp" alt="зображення Стар Бургеру" width="370" height="300">
+            <img class="rest-card__img" src="./assets/images/restaurant/resto_6@2x.webp" alt="зображення Стар Бургеру" width="370" height="300">
         </a>
         <div class="rest-card__box">
             <span class="rest-card__title">Star Burgers</span>
@@ -503,7 +503,7 @@
             <ul class="swiper-wrapper review-slider__wrapper review__list">
 
                 <li class="swiper-slide review-card">
-    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
+    <img class="review-card__img" src="./assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
     <blockquote class="review-card__blockquote">
 
         <div class="review-card__text">
@@ -520,7 +520,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
+    <img class="review-card__img" src="./assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
     <blockquote class="review-card__blockquote">
 
         <div class="review-card__text">
@@ -537,7 +537,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
+    <img class="review-card__img" src="./assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
     <blockquote class="review-card__blockquote">
 
         <div class="review-card__text">
@@ -554,7 +554,7 @@
         </span>
     </blockquote>
 </li><li class="swiper-slide review-card">
-    <img class="review-card__img" src="../assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
+    <img class="review-card__img" src="./assets/images/review/daryna@2x.webp" alt="Щаслива дівчина з гамбургером" width="300" height="300">
     <blockquote class="review-card__blockquote">
 
         <div class="review-card__text">
@@ -609,7 +609,7 @@
 </section>
                 <section class="application section" id="application">
 
-    <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
+    <div class="application__inner" style="background-image: url('./assets/images/application/get_app@1x.webp')">
 
         <div class="application__box">
 
